<resources>
    <string name="app_name">shoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="welcome">Welcome</string>
    <string name="instruction">Instruction</string>
    <string name="fabcontent">FABContent</string>
    <string name="logout">Logout</string>
    <string name="shoe_detail">Shoe detail</string>
    <string name="shoe_list">Shoe list</string>
    <string name="welcome_to_our_shoes_story">Welcome to our Shoes Story !</string>
    <string name="go_instructions">go Instructions</string>
    <string name="shoes">Shoes</string>
    <string name="shoe_name">shoe name</string>
    <string name="shoes_company">shoes company</string>
    <string name="shoes_size">shoes size</string>
    <string name="shoes_description">shoes description</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="text_instructions">How will I measure my size? \n 1. Neck Base Measure around your neck on where the shirt is placed. \n 2. Chest Place the tape measure on the widest part of your chest close to the armpit and measure around your chest. \n 3. Waist Place your hand on your waist and measure from that point. \n 4. Inner Leg Length Measure the inner leg from the uppermost part to the end. \n Pay attention to hold the tape measure straight and parallel to the surface and not to slide. \n Relax yourself when measuring, do not hold your breath and do not boost your chest. \n You should take measure on your naked body.</string>
</resources>