<?xml version="1.0" encoding="utf-8"?>

<!-- fragment using constraint's and layout to use data binding -->


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.islam.shoe.ui.shoedetail.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.shoedetail.ShoeDetail">

        <TextView
            android:id="@+id/shoe_detail_text"
            style="@style/text_style"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/shoe_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_shoes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/shoe_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/shoe_detail_text"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_text" />

        <EditText
            android:id="@+id/edt_shoes_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:text="@={viewModel.item}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/text_shoes_name"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_shoes_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/shoes_company"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/shoe_detail_text"
            app:layout_constraintTop_toBottomOf="@id/edt_shoes_name" />

        <EditText
            android:id="@+id/edt_shoes_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/text_shoes_company"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_shoes_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/shoes_size"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/text_shoes_company"
            app:layout_constraintTop_toBottomOf="@id/edt_shoes_company" />

        <EditText
            android:id="@+id/edt_shoes_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/text_shoes_size"
            tools:ignore="SpeakableTextPresentCheck,TextFields" />


        <TextView
            android:id="@+id/text_shoes_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/shoes_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/text_shoes_company"
            app:layout_constraintTop_toBottomOf="@id/edt_shoes_size" />

        <EditText
            android:id="@+id/edt_shoes_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/text_shoes_description"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:padding="16dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="@id/edt_shoes_description"
            app:layout_constraintTop_toBottomOf="@id/edt_shoes_description" />

        <Button
            android:id="@+id/btn_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/btn_save"
            app:layout_constraintTop_toTopOf="@id/btn_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>