<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.Welcome">

        <TextView
            android:id="@+id/text_welcome"
            style="@style/text_style"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_shoes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32sp"
            android:scaleType="centerCrop"
            android:src="@drawable/shoes"
            app:layout_constraintBottom_toTopOf="@id/btn_go_insta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_welcome" />

        <TextView
            android:id="@+id/text_welcome_shoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/welcome_to_our_shoes_story"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/btn_go_insta"
            app:layout_constraintStart_toStartOf="@id/btn_go_insta"
            app:layout_constraintTop_toBottomOf="@id/img_shoes" />

        <Button
            android:id="@+id/btn_go_insta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="140dp"
            android:backgroundTint="@color/black"
            android:padding="16dp"
            android:text="@string/go_instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>